# tidb-test-rig

./: ARCHITECTURE.md  Cargo.toml  MULTI_CONNECTION_ARCHITECTURE.md  Makefile  README.md  tidb_config.json  tidb_config.toml
docs/: ADVANCED_GUIDE.md  ARCHITECTURE.md  CREATING_PYTHON_TEST_DIRECTORIES.md  DYNAMIC_STATES.md  PYTHON_PLUGINS.md  RUNNING_PYTHON_TESTS.md
examples/: README.md  basic_example.rs  cli_test.rs  dynamic_state_example.rs  enhanced_error_handling.rs  isolation_test_example.rs  logging_example.rs  logging_test.rs  macro_cli_example.rs  multi_connection_example.rs  python_handlers.py  run_isolation_test.py  simple_connection_example.rs  simple_multi_connection.rs  test_rig_python.pyi
src/: __init__.py  cli.rs  cli_macros.rs  common_states.rs  config.rs  config_extensions.rs  connection.rs  connection_manager.rs  error_utils.rs  errors.rs  import_job_handlers.rs  import_job_monitor.rs  job_monitor.rs  lib.rs  lib_utils.rs  logging.rs  main.rs  multi_connection_state_machine.rs  python_bindings.rs  retry.rs  state_handlers.rs  state_machine.rs  state_machine_dynamic.rs
src/common/: __init__.py  mod.rs  python_tests.rs  test_rig_python.py
src/ddl/: Cargo.toml  README.md  __init__.py  lib.rs  test_alter_database.py  test_alter_index.py  test_alter_table.py  test_alter_user.py  test_alter_view.py  test_basic_operations.py  test_concurrent_alter_table_conflict.py  test_concurrent_create_drop_table.py  test_concurrent_ddl_dml.py  test_concurrent_insert_alter.py  test_concurrent_operations.py  test_create_database.py  test_create_index.py  test_create_table.py  test_drop_index.py  test_drop_table.py  test_error_conditions.py  test_information_schema.py  test_permissions.py  test_procedures.py  test_rename_table.py  test_rig_python.py  test_specialized_objects.py  test_temp_tables.py  test_truncate_table.py  test_views.py  tests.rs
src/import/: Cargo.toml  README.md  lib.rs  test_load_data.py
src/load_data/: README.md  __init__.py  create_import.py  run_specific_import_test.py  test_import.py  test_import_and_monitor.py  test_import_large.py  test_load_data.py
src/scale/: Cargo.toml  __init__.py  lib.rs  test_scale_basic.py
src/txn/: Cargo.toml  README.md  __init__.py  lib.rs  test_basic_transactions.py  test_deadlock_detection.py  test_deadlock_mvcc.py  test_isolation.py  test_mvcc_version_chain.py  test_savepoints.py  test_transaction_concurrency.py  test_transaction_edge_cases.py  test_transaction_errors.py  test_transaction_isolation_levels.py  test_transaction_performance.py
tests/: README.md  basic_test.rs  cli_test.rs  logging_test.rs  multi_connection_test.rs  simple_connection_test.rs  simple_multi_connection.rs
