[package]
name = "connect"
version = "0.1.0"
edition = "2024"

[lib]
name = "connect"
path = "src/lib.rs"

[features]
default = []
import_jobs = []
isolation_test = []
multi_connection = []
debug = []
verbose = []

[dependencies]
clap = { version = "4.0", features = ["derive"] }
mysql = { version = "26.0", features = ["chrono"] }
rpassword = "7.2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"

[[example]]
name = "basic_test"
path = "examples/basic_test.rs"
required-features = []

[[example]]
name = "simple_connection"
path = "examples/simple_connection_test.rs"
required-features = []

[[example]]
name = "simple_multi_connection"
path = "examples/simple_multi_connection.rs"
required-features = ["multi_connection"]

[[example]]
name = "multi_connection_test"
path = "examples/multi_connection_test.rs"
required-features = ["multi_connection", "import_jobs"]

[[example]]
name = "isolation_test"
path = "examples/isolation_test.rs"
required-features = ["isolation_test"]

[[example]]
name = "cli_test"
path = "examples/cli_test.rs"
required-features = ["isolation_test"]

[[example]]
name = "logging_test"
path = "examples/logging_test.rs"
required-features = []