[package]
name = "test_rig"
version = "0.1.0"
edition = "2024"

[lib]
name = "test_rig"
path = "src/lib.rs"

[features]
default = []
import_jobs = []
isolation_test = []
multi_connection = []
debug = []
verbose = []

[dependencies]
clap = { version = "4.0", features = ["derive"] }
mysql = { version = "26.0", features = ["chrono"] }
rpassword = "7.2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
thiserror = "2.0"

[[bin]]
name = "basic"
path = "src/bin/basic.rs"
required-features = []

[[bin]]
name = "simple_multi_connection"
path = "src/bin/simple_multi_connection.rs"
required-features = ["multi_connection"]

[[bin]]
name = "multi_connection"
path = "src/bin/multi_connection.rs"
required-features = ["multi_connection", "import_jobs"]

[[bin]]
name = "isolation"
path = "src/bin/isolation.rs"
required-features = ["isolation_test"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["isolation_test"]

[[bin]]
name = "logging"
path = "src/bin/logging.rs"
required-features = []

[[bin]]
name = "job_monitor"
path = "src/bin/job_monitor.rs"
required-features = ["import_jobs"]

[[bin]]
name = "config_gen"
path = "src/bin/config_gen.rs"
required-features = []

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.0"