[workspace]
members = ["src/bin", "src/ddl", "src/scale", "src/txn"]

[package]
name = "test_rig"
version = "0.1.0"
edition = "2024"

[lib]
name = "test_rig"
path = "src/lib.rs"

[features]
default = []
import_jobs = []
isolation_test = []
multi_connection = []
debug = []
verbose = []
python_plugins = ["pyo3/auto-initialize"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
mysql = { version = "26.0", features = ["chrono"] }
rpassword = "7.2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full", "time"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
thiserror = "2.0"
rand = "0.8"
pyo3 = { version = "0.20", features = ["auto-initialize", "macros"], optional = true }

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.0"