[package]
name = "ddl"
version = "0.1.0"
edition = "2024"

[lib]
name = "ddl"
path = "lib.rs"

[[bin]]
name = "ddl_test_runner"
path = "bin/ddl_test_runner.rs"

[features]
python_plugins = ["test_rig/python_plugins"]

[dependencies]
test_rig = { path = "../.." }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"
clap = { version = "4.0", features = ["derive"] } 